--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.2.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.dirverger</groupId>
+	<groupId>com.diverger</groupId>
 	<artifactId>swapi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>swapi</name>
@@ -32,6 +32,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!--Swagger UI https://www.baeldung.com/spring-rest-openapi-documentation-->
+		<!--http://localhost:8080/swagger-ui/index.html-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
