added docker compose

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-HELP.md
+backend/HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -31,3 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
+
+
+npm-debug.log*
+# dependencies
+/node_modules
